# OboeAudioRecorder

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/oboesample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/filter/: BiquadFilter.cpp  BiquadFilter.h  EchoCanceller.cpp  EchoCanceller.h  NoiseGate.cpp  NoiseGate.h  NoiseReduction.cpp  NoiseReduction.h  PlaybackSuppressor.cpp  PlaybackSuppressor.h
app/src/main/java/com/example/oboesample/: AudioEngine.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/oboesample/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
